results/SpecGenBench/2-shot/log-PerfectNumber-2023_11_06_02_58_17.txt
class PerfectNumber {
    //@ ensures \result ==> (\forall int d; 2 <= d && d * d <= num; (num % d == 0 ==> (d * d < num ==> sum == sum + d + num / d)));
    //@ ensures !\result ==> (num == 1 || (\exists int d; 2 <= d && d * d <= num; num % d == 0 && (d * d < num && sum != sum + d + num / d)));
    public boolean isPerfectNumber(int num) {
        if (num == 1) {
            return false;
        }

        int sum = 1;
        //@ maintaining 2 <= d && d * d <= num;
        //@ maintaining (\forall int k; 2 <= k && k < d; num % k == 0 ==> (k * k < num ==> sum == sum + k + num / k));
        //@ decreases num - d * d;
        for (int d = 2; d * d <= num; ++d) {
            if (num % d == 0) {
                sum += d;
                if (d * d < num) {
                    sum += num / d;
                }
            }
        }
        return sum == num;
    }
}
/home/max/Documents/JMLGPT/tmp/PerfectNumber.java:2: error: cannot find symbol
    //@ ensures \result ==> (\forall int d; 2 <= d && d * d <= num; (num % d == 0 ==> (d * d < num ==> sum == sum + d + num / d)));
                                                                                                       ^
  symbol:   variable sum
  location: class PerfectNumber
/home/max/Documents/JMLGPT/tmp/PerfectNumber.java:2: error: cannot find symbol
    //@ ensures \result ==> (\forall int d; 2 <= d && d * d <= num; (num % d == 0 ==> (d * d < num ==> sum == sum + d + num / d)));
                                                                                                              ^
  symbol:   variable sum
  location: class PerfectNumber
/home/max/Documents/JMLGPT/tmp/PerfectNumber.java:3: error: cannot find symbol
    //@ ensures !\result ==> (num == 1 || (\exists int d; 2 <= d && d * d <= num; num % d == 0 && (d * d < num && sum != sum + d + num / d)));
                                                                                                                  ^
  symbol:   variable sum
  location: class PerfectNumber
/home/max/Documents/JMLGPT/tmp/PerfectNumber.java:3: error: cannot find symbol
    //@ ensures !\result ==> (num == 1 || (\exists int d; 2 <= d && d * d <= num; num % d == 0 && (d * d < num && sum != sum + d + num / d)));
                                                                                                                         ^
  symbol:   variable sum
  location: class PerfectNumber
4 errors

